[package]
name = "dockurl"
description = "A synchronous low-level Docker API Rust library"
version = "0.1.6"
authors = ["Mike Smith <msmith@techempower.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/techempower/dockurl"
keywords = ["docker", "curl"]
categories = ["api-bindings"]

[dependencies]
curl = "0.4.33"
tar = "0.4.28"
thiserror ="1.0.19"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"
